--- a/Fashion Store Clon/style.scss
+++ b/Fashion Store Clon/style.scss
@@ -4,13 +4,16 @@ $grey:#D7DBDB;
 
 body {
     display: flex;
+    gap: 20px;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #BABDBD;
 }
 
-.phone {
+.phone1,
+.phone2 {
+    position: relative;
     width: 400px;
     height: 95%;
     border-radius: 10px;
@@ -106,4 +109,113 @@ body {
     width: 45%;
     height: 70%;
     border: 3px solid black;
+}
+
+//phone2
+
+.status {
+    background-color: black;
+    padding: 15px;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: $grey;
+    font-weight: bold;
+    .status__number {
+        font-size: 17px;
+    }
+    .status__info {
+        font-size: 20px;
+        text-transform: uppercase;
+    }
+}
+
+.summary {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: #A2E571;
+    border-bottom: 3px solid black;
+    padding: 10px 15px;
+    .summary__info {
+        display: flex;
+        flex-direction: column;
+        font-weight: bold;
+        &:nth-child(2) {
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+            gap: 20px;
+        }
+        .summary__title {
+            font-size: 17px;
+        }
+        .summary__status {
+            font-size: 13px;
+        }
+        .summary__total-price {
+            font-size: 20px;
+        }
+    }
+}
+
+.forms {
+    padding-bottom: 30px;
+    border-bottom: 3px solid black;
+    background-color: #C6CACA;
+    .forms__form {
+        background-color: $grey;
+        .form__info {
+            display: grid;
+            grid-template-rows: repeat(auto-fill, 1fr);
+            .form__info-row {
+                display: grid;
+                grid-template-columns: 80% 20%;
+                gap: 10px;
+                padding: 15px;
+                font-weight: bold;
+                border-bottom: 3px solid black;
+                &:nth-child(odd) { //nth-child(홀수)
+                    background-color: #C6CACA;
+                }
+                .info__icon {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    i {
+                    font-size: 30px;
+                    }
+                }
+                .info__main {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    .info__title {
+                        font-size: 40px;
+                    }
+                    .info__content {
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.footer {
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #A2E571;
+    border-radius: 0px 0px 10px 10px;
+    .footer__proceed {
+        font-size: 15px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
 }
