--- a/Design Agency Clon/style.scss
+++ b/Design Agency Clon/style.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-    max-width: 80%;
+    width: 80%;
     height: 95%;
     padding: 20px;
     box-sizing: border-box;
@@ -34,7 +34,7 @@ body {
                     background-color: white;
                     grid-column: span 2;
                     border-radius: $cellRadius;
-                    padding: 35px;
+                    padding: 30px;
                     display: grid;
                     grid-template-rows: 1fr 2.5fr 1fr;
                     font-weight: bold;
@@ -64,10 +64,9 @@ body {
                     .header__subtitle {
                         justify-self: center;
                         align-self: center;
-                        font-size: 30px;
-                        line-height: 30px;
+                        font-size: 20px;
+                        line-height: 25px;
                         border-top: 1px solid black;
-                        padding-top: 20px;
                     }
                 }
             }
@@ -138,6 +137,7 @@ body {
                     p {
                         padding: 20px;
                         width: 80%;
+                        font-size: 14px;
                     }
                 }
             }
